--- a/public/why.html
+++ b/public/why.html
@@ -63,7 +63,7 @@
       <section class="content" id="content">
         <!-- <p class="date">December 13, 2021</p> -->
         <h2>Revolutionizing education</h2>
-        <p>After years of working in the tutoring industry at various companies and privately tutoring, Matthew and I wanted to make something revolutionary. For as long as humans have
+        <p>After years of working in the tutoring industry at various companies and privately tutoring, Matthew and Duncan wanted to make something revolutionary. For as long as humans have
           existed there has been one model to mastery: learn, practice, repeat. We're not changing that. It has worked for thouasands of years, so if it ain't broke, don't fix it. Instead
           we're adding the special sauce that every modern company has used to bring their industry to next level - data. Google, Facebook, Amazon. Revolutionaries in their 
           respective fields. How do we bring that same data to education?
