--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Lyrn Tutoring is bringing education into the 21st century with adaptive learning. A simple and transparent tutoring experience driven by data to bring about success for your student in any class or upcoming test.">
+    <meta name="description" content="Lyrn Tutoring is bringing education into the 21st century with adaptive learning. A simple and transparent online tutoring experience driven by data to bring about success for your student in any class or upcoming test.">
     
     <meta property="og:url" content="https://www.lyrnwithus.com" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Lyrn Tutoring" />
-    <meta property="og:description" content="Lyrn Tutoring is bringing education into the 21st century with adaptive learning. A simple and transparent tutoring experience driven by data to bring about success for your student in any class or upcoming test." />
+    <meta property="og:description" content="Lyrn Tutoring is bringing education into the 21st century with adaptive learning. A simple and transparent online tutoring experience driven by data to bring about success for your student in any class or upcoming test." />
     <meta property="og:image" content="https://lyrnwithus.com/Images/Lyrn_About_2.png" />
     <title>Lyrn | Data Driven Tutoring through Adaptive Learning</title>
 
@@ -121,7 +121,7 @@
           <div class="background-main noselect">College Consultation</div>
         </div>
         <div class="hero__intro">
-          <h1>Simple and Transparent Tutoring</h1>
+          <h1>Simple and Transparent Online Tutoring</h1>
           <h4>Subject Tutoring and ACT Prep with <a href="why.html">Adaptive Learning Intelligence</a></h4>
           <div><a class="enroll" href="pricing.html">See our pricing</a></div>
         </div>
