price change and phone change

--- a/public/pricing.html
+++ b/public/pricing.html
@@ -239,7 +239,7 @@
         <div class="intro-wrapper">
           <div class="title">
             <h3>Subject Tutoring</h3>
-            <h3 class="price">$40/hr</h3>
+            <h3 class="price">$25/hr</h3>
           </div>
           <h4>Personal 1 on 1 tutoring in any subject. No contracts; 30 minute minimum lesson length.</h4>
           <div class="feature-wrapper">
@@ -255,6 +255,12 @@
             </ul>
           </div>
           <div class="bottom"></div>
+        </div>
+        <div class="node"></div>
+        <div class="content-wrapper">
+          <h5>All of our tutors are qualified and trained to guarantee that your student gets the <strong>best tutoring</strong> with one <strong>simple price</strong>.
+            Click "Select" to get started as soon as tomorrow!
+          </h5>
         </div>
         <div class="node"></div>
         <div class="plans">
