--- a/public/enroll.html
+++ b/public/enroll.html
@@ -49,9 +49,10 @@
           <li><a href="why.html">Why Lyrn</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <!-- <li><a href="sign-in.html">Sign In</a></li> -->
-          <li><a class="enroll" href="#">Get Started</a></li>
+          <li><a href="#">Enroll</a></li>
         </ul>
       </nav>
+      <div class="phone"><a href="tel:+13853000906"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000"><path d="M0 0h24v24H0z" fill="none"></path><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"></path></svg> Call Now (385) 300-0906</a></div>
     </header>
 
     <main>
@@ -61,8 +62,10 @@
           <h1>Start learning today</h1>
         </div>
         <div class="contact-form">
-          <h3>Schedule Your Meeting</h3>
-          <h5>Let's talk! One of our program specialist will contact you to learn more about your student's needs.</h5>
+          <h3>Enroll Now</h3>
+          <h5>by giving us a call or a text</h5>
+          <div class="phone"><a href="tel:+13853000906"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000"><path d="M0 0h24v24H0z" fill="none"></path><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"></path></svg>(385) 300-0906</a></div>
+          <p>or let us know a little more about you and we will get back to you</p>
           <form action="" id="contactForm">
             <label for="name">First and Last Name</label>
             <input type="text" name="name" id="name" required>
@@ -82,10 +85,8 @@
             </div>
             <label for="message">Message</label>
             <textarea name="message" id="message"></textarea>
-            <input type="submit" value="Submit" class="submit">
+            <input type="submit" value="Submit">
           </form>
-          <p>You can also call or text us 1pm to 9pm MDT</p>
-          <a href="tel:+13853000906">(385) 300-0906</a>
         </div>
       </section>
 
