--- a/public/index.html
+++ b/public/index.html
@@ -55,9 +55,10 @@
           <li><a href="why.html">Why Lyrn</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <!-- <li><a href="sign-in.html">Sign In</a></li> -->
-          <li><a class="enroll" href="enroll.html">Get Started</a></li>
+          <li><a href="enroll.html">Enroll</a></li>
         </ul>
       </nav>
+      <div class="phone"><a href="tel:+13853000906"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000"><path d="M0 0h24v24H0z" fill="none"></path><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"></path></svg> Call Now (385) 300-0906</a></div>
     </header>
 
     <main>
@@ -123,7 +124,7 @@
         <div class="hero__intro">
           <h1>Simple and Transparent Online Tutoring</h1>
           <h4>Subject Tutoring and ACT Prep with <a href="why.html">Adaptive Learning Intelligence</a></h4>
-          <div><a class="enroll" href="pricing.html">See our pricing</a></div>
+          <div><a class="hero__button" href="pricing.html">See our pricing</a></div>
         </div>
         <!-- <div class="hero__body">
             <img src="Images/Lyrn_hero_section_image.png" alt="Adaptive Learning in action">
@@ -275,8 +276,10 @@
           </h4>
         </div>
         <div class="contact-form">
-          <h3>Let us contact you</h3>
-          <h5>and we will get back to you as soon as we can</h5>
+          <h3>Get Started</h3>
+          <h5>by giving us a call or a text</h5>
+          <div class="phone"><a href="tel:+13853000906"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000"><path d="M0 0h24v24H0z" fill="none"></path><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"></path></svg>(385) 300-0906</a></div>
+          <p>or let us know a little more about you and we will get back to you</p>
           <form action="" id="contactForm">
             <label for="name">First and Last Name</label>
             <input type="text" name="name" id="name" required>
@@ -298,8 +301,6 @@
             <textarea name="message" id="message"></textarea>
             <input type="submit" value="Submit">
           </form>
-          <p>or you can call or text us 1pm to 9pm MDT</p>
-          <a href="tel:+13853000906">(385) 300-0906</a>
         </div>
       </section>
   
