--- a/public/pricing.html
+++ b/public/pricing.html
@@ -29,9 +29,11 @@
           <li><a href="why.html">Why Lyrn</a></li>
           <li><a href="#">Pricing</a></li>
           <!-- <li><a href="sign-in.html">Sign In</a></li> -->
-          <li><a class="enroll" href="enroll.html">Get Started</a></li>
+          <!-- <li><a class="enroll" href="enroll.html">Get Started</a></li> -->
+          <li><a href="enroll.html">Enroll</a></li>
         </ul>
       </nav>
+      <div class="phone"><a href="tel:+13853000906"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000"><path d="M0 0h24v24H0z" fill="none"></path><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"></path></svg> Call Now (385) 300-0906</a></div>
     </header>
 
     <main>
@@ -257,16 +259,18 @@
           <div class="bottom"></div>
         </div>
         <div class="node"></div>
-        <div class="content-wrapper">
+        <div class="plan-wrapper">
           <h5>All of our tutors are qualified and trained to guarantee that your student gets the <strong>best tutoring</strong> with one <strong>simple price</strong>.
-            Click "Select" to get started as soon as tomorrow!
+            
           </h5>
         </div>
         <div class="node"></div>
         <div class="plans">
           <div class="plan-wrapper">
+            <h2 style="margin-top: 0;">Get started today!</h2>
             <div class="select">
-              <a href="enroll.html"><h3>Select</h3></a>
+              <a href="tel:+13853000906"><h3>Call Us</h3></a>
+              <p>(385) 300-0906</p>
             </div>
           </div>
         </div>
