--- a/public/testEditor.html
+++ b/public/testEditor.html
@@ -117,6 +117,7 @@
             <option value="October">October</option>
             <option value="November">November</option>
             <option value="December">December</option>
+            <option value="Practice">Practice</option>
           </select>
 
           <!-- Code -->
