beginning of new act fundamental

--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -351,6 +351,7 @@
         <button class="button" onclick="window.location.href='../new-student.html'">New Student</button>
         <button class="button" onclick="window.location.href='../calendar.html'">Calendar</button>
         <button class="button" onclick="window.location.href='../new-tutor.html'">New Tutor</button>
+        <button class="button" onclick="window.location.href='../new-act-fundamentals.html'">New ACT Fundamentals</button>
         <!-- <button class="button" onclick="openModal('tutor')">Add Tutor</button> -->
         <!-- <button class="button" onclick="goToStaffRegistration()">Add Staff</button> -->
         <!-- <button class="button" onclick="openModal('admin')">Add Admin</button> -->
