--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -328,7 +328,7 @@
       <div id="navigationModal">
         <div class="close" onclick="document.getElementById('navigationSection').style.display = 'none'">X</div>
         <h4 style="margin: 0;">What would you like to see?</h4>
-        <!-- <button id="actNav" class="button">ACT</button> -->
+        <button id="actNav" class="button">ACT</button>
         <!-- <button id="subjectTutoringNav" class="button">Subject Tutoring</button> -->
         <!-- <button id="mathProgramNav" class="button">Math Program</button>
         <button id="phonicsProgramNav" class="button">Phonics Program</button> -->
@@ -352,6 +352,7 @@
         <button class="button" onclick="window.location.href='../calendar.html'">Calendar</button>
         <button class="button" onclick="window.location.href='../new-tutor.html'">New Tutor</button>
         <button class="button" onclick="window.location.href='../new-act-fundamentals.html'">New ACT Fundamentals</button>
+        <button class="button" onclick="window.location.href='../Forms/ACT Daily Log/Daily Log.html'">Daily Log</button>
         <!-- <button class="button" onclick="openModal('tutor')">Add Tutor</button> -->
         <!-- <button class="button" onclick="goToStaffRegistration()">Add Staff</button> -->
         <!-- <button class="button" onclick="openModal('admin')">Add Admin</button> -->
