--- a/public/new-act-fundamentals.html
+++ b/public/new-act-fundamentals.html
@@ -43,7 +43,7 @@
     </div>
     <label for="student">Student</label>
     <div class="loading-wrapper">
-      <select name="student" id="student" class="ui dropdown search">
+      <select name="student" id="student" class="ui dropdown search" required>
         <option value="" disabled selected>select a student</option>
       </select>
     </div>
@@ -54,7 +54,14 @@
       </select>
     </div>
 
-    <div id="testList"></div>
+    <div id="testList">
+      <div>Test</div>
+      <div>Composite</div>
+      <div>English</div>
+      <div>Math</div>
+      <div>Reading</div>
+      <div>Science</div>
+    </div>
     
     <p class="error">error message</p>
     <button id="action"><div class="loading-wrapper loading">Loading</div></button>
