--- a/public/test-taker.html
+++ b/public/test-taker.html
@@ -73,11 +73,11 @@
       <div class="next-lesson-wrapper box">
         <h2>Your next lesson is <span id="nextLessonDetails"></span></h2>
       </div>
-      <div class="daily-assignment-wrapper">
+      <div class="section-assignment-wrapper">
         <h3>Homework Assignment</h3>
         <div id="sectionAssignmentList"></div>
       </div>
-      <div class="section-assignment-wrapper">
+      <div class="daily-assignment-wrapper">
         <h3>Daily Assignments</h3>
         <div id="dailyAssignmentList"></div>
       </div>
@@ -107,7 +107,7 @@
       <div class="selector">
         <div class="selector-scroll">
           <div class="time-container">
-            <div class="background-accent box">Time</div>
+            <div id="sectionTime" class="background-accent box">Time</div>
           </div>
           <div class="selector-container"></div>
           <div class="background-accent box submit">Submit Test</div>
