--- a/public/careers.html
+++ b/public/careers.html
@@ -25,7 +25,7 @@
           <li><a href="why.html">Why Lyrn</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <!-- <li><a href="sign-in.html">Sign In</a></li> -->
-          <li><a class="enroll" href="enroll.html">Get Started</a></li>
+          <!-- <li><a class="enroll" href="enroll.html">Get Started</a></li> -->
         </ul>
       </nav>
     </header>
@@ -44,24 +44,32 @@
         <p>At Lyrn, we are dedicated to providing the most advanced tutoring to our students. This cannot be accomplished without dedicated tutors who love teaching as much as they 
           love learning. Our flexible hours make it easy for anyone to join our team and start teaching. We let you completely control your own schedule to fit your chaotic college
           schedule. We offer both subject tutoring for all general subjects and ACT tutoring. Everyone will start off tutoring in the subjects they feel
-          the most comfortable in and will recieve training on some if not all of the sections in the ACT.
+          the most comfortable in and will receive training on some if not all of the sections in the ACT.
         </p>
         <p class="ul-header"><strong>Benefits</strong></p>
         <ul>
           <li><strong>Competitive Pay</strong> - Starting at $15 an hour plus a 50¢ per hour increase for each section of the ACT you can teach.</li>
           <li><strong>Flexible Schedule</strong> - You tell us when you can work and we will fill your schedule.</li>
-          <li><strong>Work as little or as much as you want</strong> - The minimum number of hours you must have avaialable is 5 but the limit is up to you.</li>
+          <li><strong>Work as little or as much as you want</strong> - The minimum number of hours you must have available is 5 but the limit is up to you.</li>
           <li><strong>You're in control</strong> - Change your schedule up to the day before.</li>
           <li><strong>Online</strong> - Our entire company started online which means you can work from anywhere.</li>
         </ul>
         <p class="ul-header"><strong>Responsibilities</strong></p>
         <ul>
-          <li><strong>Professional</strong> - You will be the face of Lyrn so proffesionalism is key.</li>
+          <li><strong>Professional</strong> - You will be the face of Lyrn so professionalism is key.</li>
           <li><strong>Great with teens</strong> - Most of your work will be with high school aged kids, so being able to communicate well with them is crucial.</li>
           <li><strong>Knowlegdable</strong> - Must have a strong foundation in what you are teaching. You should be able to answer the vast majority of questions your
           students might ask. You don't need to know eveything, but in the topics you are teaching, you should know quite a bit.</li>
           <li><strong>Technology</strong> - Since your job is online, we require that you have at device capable of zooming students&mdash;preferably one that has a touch screen
             so that you can draw on your virtual whiteboard.</li>
+        </ul>
+
+        <p class="ul-header"><strong>Qualifications</strong></p>
+        <ul>
+          <li><strong>Academics</strong> - We're looking for students that are excelling in their courses and able to teach simple concepts to all K-12 students.</li>
+          <li><strong>ACT</strong> - We won't look at your ACT scores from high school but for the interview process we will let you choose to take either a math or 
+            reading section and we want to see you get a 30 or higher.</li>
+          <li><strong>Technology</strong> - Your ability to use our custom software is key to working here so basic computer literacy is a must.</li>
         </ul>
 
         <p>So what are you waiting for? Send us an email with your résume letting us know you're interested. Include in your email what you are currently studying or what you studied
