--- a/public/why.html
+++ b/public/why.html
@@ -17,7 +17,20 @@
 
   <body>
     <header class="nav-start">
-      <a href="index.html" class="logo"><img src="Images/Lyrn_Logo.png" alt="lyrn logo"></a>
+      <a href="index.html" class="logo">
+        <svg class="logo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="303 440 496 225" style="enable-background:new 0 0 1080 1080;" xml:space="preserve">
+          <g>
+            <polygon points="306.24,508.83 306.24,625.38 428.17,612.83 428.17,569.79 351.96,578.76 354.65,457.72 345.26,457.72 "/>
+            <polygon points="417.34,494.64 471.25,609.28 450.18,662.57 496.66,658.85 564.21,472.95 516.49,478.52 493.56,549.79 466.29,486.58 	"/>
+            <path d="M577.22,471.09v125.8l45.24-4.34l-1.24-69.41c0,0,13.63-16.73,38.35-16.73v-47.85c0,0-24.19,3.15-37.33,19.98v-12.62L577.22,471.09z"/>
+            <path d="M675.34,459.54v124.14c0,1.41,1.23,2.51,2.63,2.34l40.5-4.71c1.19-0.14,2.09-1.15,2.09-2.34v-76.8
+              c0-0.34,0.18-0.64,0.21-0.98c0.27-2.93,7.07-13.36,21.72-10.05c0.11,0.02,0.2,0.03,0.31,0.05c1.21,0.27,8.78,2.38,8.78,12.06
+              l0.51,72.12c0.01,1.37,1.18,2.45,2.55,2.34l40.52-3.3c1.23-0.1,2.17-1.12,2.17-2.35v-84.58c0-18.63-11.12-38.81-30.05-43.75
+              c-14.4-3.76-32.48-0.04-42.64,11.23c-1.43,1.59-4.07,0.53-4.07-1.61l0,0c0-1.45-1.29-2.55-2.72-2.33l-40.5,6.19
+              C676.19,457.38,675.34,458.37,675.34,459.54z"/>
+          </g>
+        </svg>
+      </a>
       <label for="nav-toggle" class="nav-toggle-label">
         <span></span>
       </label>
@@ -28,7 +41,8 @@
           <li><a href="#">Why Lyrn</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <!-- <li><a href="sign-in.html">Sign In</a></li> -->
-          <li><a href="enroll.html">Enroll</a></li>
+          <!-- <li><a class="enroll" href="enroll.html">Get Started</a></li> -->
+          <!-- <li><a href="enroll.html">Enroll</a></li> -->
         </ul>
       </nav>
       <div class="phone"><a href="tel:+13853000906"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000"><path d="M0 0h24v24H0z" fill="none"></path><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"></path></svg> Call Now (385) 300-0906</a></div>
@@ -52,7 +66,7 @@
           </div>
           <div class="why-card">
             <h3>Simple Process</h3>
-            <p> <a href="enroll.html">Get started</a> as soon as tomorrow.</p>
+            <p> <a href="pricing.html">Get started</a> as soon as tomorrow.</p>
           </div>
           <div class="why-card">
             <h3>Transparent Pricing</h3>
@@ -64,7 +78,7 @@
       <section class="content" id="content">
         <!-- <p class="date">December 13, 2021</p> -->
         <h2>Revolutionizing education</h2>
-        <p>After years of working in the tutoring industry at various companies and privately tutoring, Matthew and Duncan wanted to make something revolutionary. For as long as humans have
+        <p>After years of working in the tutoring industry at various companies and privately tutoring, we wanted to make something revolutionary. For as long as humans have
           existed there has been one model to mastery: learn, practice, repeat. We're not changing that. It has worked for thouasands of years, so if it ain't broke, don't fix it. Instead
           we're adding the special sauce that every modern company has used to bring their industry to next level - data. Google, Facebook, Amazon. Revolutionaries in their 
           respective fields. How do we bring that same data to education?
@@ -119,9 +133,9 @@
           working with multiple tutors and having to juggle those meetings. We handle the entire process. Your student's tutor will be ready to help as soon as your student logs in to start the session. 
         </p>
         <h2>Want to know more?</h2>
-        <p>We are here to help, so let's <a href="enroll.html">get started!</a>
+        <p>We are here to help, so let's <a href="pricing.html">get started!</a>
         </p>
-        <p>Duncan and Matthew</p>
+        <p>Duncan and Matthew<br>Founders of Lyrn</p>
       </section>
 
       <!-- <section class="topics"></section> -->
@@ -130,11 +144,22 @@
     <footer>
       <div class="links">
         <div>
-          <div class="logo-box">
-            <img src="Images/Lyrn_Logo.png" alt="Lyrn Logo">
+          <div>
+            <svg class="logo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="303 440 496 225" style="enable-background:new 0 0 1080 1080;" xml:space="preserve">
+              <g>
+                <polygon points="306.24,508.83 306.24,625.38 428.17,612.83 428.17,569.79 351.96,578.76 354.65,457.72 345.26,457.72 "/>
+                <polygon points="417.34,494.64 471.25,609.28 450.18,662.57 496.66,658.85 564.21,472.95 516.49,478.52 493.56,549.79 466.29,486.58 	"/>
+                <path d="M577.22,471.09v125.8l45.24-4.34l-1.24-69.41c0,0,13.63-16.73,38.35-16.73v-47.85c0,0-24.19,3.15-37.33,19.98v-12.62L577.22,471.09z"/>
+                <path d="M675.34,459.54v124.14c0,1.41,1.23,2.51,2.63,2.34l40.5-4.71c1.19-0.14,2.09-1.15,2.09-2.34v-76.8
+                  c0-0.34,0.18-0.64,0.21-0.98c0.27-2.93,7.07-13.36,21.72-10.05c0.11,0.02,0.2,0.03,0.31,0.05c1.21,0.27,8.78,2.38,8.78,12.06
+                  l0.51,72.12c0.01,1.37,1.18,2.45,2.55,2.34l40.52-3.3c1.23-0.1,2.17-1.12,2.17-2.35v-84.58c0-18.63-11.12-38.81-30.05-43.75
+                  c-14.4-3.76-32.48-0.04-42.64,11.23c-1.43,1.59-4.07,0.53-4.07-1.61l0,0c0-1.45-1.29-2.55-2.72-2.33l-40.5,6.19
+                  C676.19,457.38,675.34,458.37,675.34,459.54z"/>
+              </g>
+            </svg>
           </div>
         </div>
-        <div>
+        <div class="site-map">
           <h3>Site Map</h3>
           <ul>
             <li><a href="index.html">Home</a></li>
