right before people start looking

--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -40,7 +40,7 @@
         </div>
         <div id="form-scroll-block">
           <div id="spinnyBoiTutor" class="loader"></div>
-          <form onsubmit="return false">
+          <form onsubmit="() => {return false}">
             <div class="input-row">
               <div class="input-block">
                   <label for="tutorLocation" class="label">Wasatch Location:</label>
@@ -88,7 +88,7 @@
         </div>
         <div id="form-scroll-block">
           <div id="spinnyBoiSecretary" class="loader"></div>
-          <form onsubmit="return false">
+          <form onsubmit="() => {return false}">
             <div class="input-block">
               <label for="secretaryLocation" class="label">Wasatch Location:</label>
               <select id="secretaryLocation" class="select" required>
@@ -134,7 +134,7 @@
         </div>
         <div id="form-scroll-block">
           <div id="spinnyBoiAdmin" class="loader"></div>
-          <form onsubmit="return false">
+          <form onsubmit="() => {return false}">
             <!-- <div class="input-block">
               <label for="adminLocation" class="label">Wasatch Location:</label>
               <select id="adminLocation" class="select" required>
@@ -180,7 +180,7 @@
         </div>
         <div id="form-scroll-block">
           <div id="spinnyBoiLocation" class="loader"></div>
-          <form onsubmit="return false">
+          <form onsubmit="() => {return false}">
             <div class="input-row">
               <div class="input-block">
                   <label for="locationName" class="label">Location</label>
@@ -208,7 +208,7 @@
         </div>
         <div id="form-scroll-block">
           <div id="spinnyBoiSchool" class="loader"></div>
-          <form onsubmit="return false">
+          <form onsubmit="() => {return false}">
             <div class="input-row">
               <div class="input-block">
                   <label for="schoolLocation" class="label">Wasatch Location:</label>
@@ -303,7 +303,7 @@
         </div>
         <div id="form-scroll-block">
           <div id="spinnyBoiExtracurricular" class="loader"></div>
-          <form onsubmit="return false">
+          <form onsubmit="() => {return false}">
             <div class="input-row">
               <div class="input-block">
                   <label for="extracurricular" class="label">Extracurricular</label>
@@ -352,7 +352,7 @@
         <button class="button" onclick="window.location.href='../calendar.html'">Calendar</button>
         <button class="button" onclick="window.location.href='../new-tutor.html'">New Tutor</button>
         <button class="button" onclick="window.location.href='../new-act-fundamentals.html'">New ACT Fundamentals</button>
-        <button class="button" onclick="window.location.href='../Forms/ACT Daily Log/Daily Log.html'">Daily Log</button>
+        <button class="button" onclick="window.location.href='../act-sign-up'">New ACT Basic/Guided</button>
         <!-- <button class="button" onclick="openModal('tutor')">Add Tutor</button> -->
         <!-- <button class="button" onclick="goToStaffRegistration()">Add Staff</button> -->
         <!-- <button class="button" onclick="openModal('admin')">Add Admin</button> -->
