--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -172,16 +172,15 @@
             <p id = 'scienceText' style='display:none'></p>
         </div> -->
 
-        <div class="dropdown">
-            <button class="dropbtn">Print Outs</button>
+        <!-- <div class="dropdown">
+            <button class="dropbtn">Print Test</button>
             <div class="dropdown-content right">
-                <!-- <div onclick = "openCramSession('1')" style = 'z-index: 3;'>1-Session Cram</div>
-                <div onclick = "openCramSession('2')" style = 'z-index: 3;'>2-Session Cram</div>
-                <div onclick = "openCramSession('3')" style = 'z-index: 3;'>3-Session Cram</div>
-                <div onclick = "openCramSession('4')" style = 'z-index: 3;'>4-Session Cram</div>
-                <div onclick = "openLastSession()" style = 'z-index: 3;'>Last Session</div> -->
                 <input id = 'printTest' placeholder = "Print Full Test" style = 'z-index: 3;'></input>
             </div>
+        </div> -->
+        <div class="print-outs">
+            <label for="printTest">Open Test</label>
+            <input id = 'printTest' placeholder = "B05 Math"></input>
         </div>
 
     </div>
