--- a/public/careers.html
+++ b/public/careers.html
@@ -67,7 +67,7 @@
         <p class="ul-header"><strong>Qualifications</strong></p>
         <ul>
           <li><strong>Academics</strong> - We're looking for students that are excelling in their courses and able to teach simple concepts to all K-12 students.</li>
-          <li><strong>ACT</strong> - We won't look at your ACT scores from high school but for the interview process we will let you choose to take either a math or 
+          <li><strong>ACT</strong> - We won't look at your high school ACT scores but for the interview process we will let you choose to take either a math or 
             reading section and we want to see you get a 30 or higher.</li>
           <li><strong>Technology</strong> - Your ability to use our custom software is key to working here so basic computer literacy is a must.</li>
         </ul>
