--- a/public/pricing.html
+++ b/public/pricing.html
@@ -144,8 +144,8 @@
           <div class="plan-wrapper fundamentals">
             <div class="title">
               <h3>ACT BASICS</h3>
-              <h4>1-3 point ACT increase</h4>
-              <h4>$50/hr</h4>
+              <h4>Guaranteed 1-2 point ACT increase</h4>
+              <h4>$900 - $1200</h4>
             </div>
             <div class="length">
               <h4>Suggested Program Length</h4>
@@ -184,8 +184,8 @@
           <div class="plan-wrapper comprehensive">
             <div class="title">
               <h3>GUIDED ACT</h3>
-              <h4>3-5 point ACT increase</h4>
-              <h4>$75/hr</h4>
+              <h4>Guaranteed 3-4 point ACT increase</h4>
+              <h4>$1800 - $2400</h4>
             </div>
             <div class="length">
               <h4>Suggested Program Length</h4>
@@ -229,6 +229,25 @@
               <p>10% off When you pay up-front</p>
             </div> -->
           </div>
+        </div>
+        <div class="plan-wrapper custom">
+          <div class="title">
+            <h3>Customized programs</h3>
+            <h4>If you want a custom program that meets your needs and doesn't quite fit into our set porgrams, we would love to help get you started at no additional cost.</h4>
+          </div>
+          <div class="length">
+            <h5>Give us a call or text if you have any questions about our programs</h5>
+          </div>
+          <h4 class="start">GET STARTED TODAY!</h4>
+          <div class="select">
+            <a href="tel:+13853000906">
+              <h3>CALL US</h3>
+              <p>(385) 300-0906</p>
+            </a>
+          </div>
+          <!-- <div class="discount-wrapper">
+            <p>10% off When you pay up-front</p>
+          </div> -->
         </div>
         <!-- <div class="node"></div>
         <h2>3. Start Your Journey</h2>
