--- a/public/payment.html
+++ b/public/payment.html
@@ -145,6 +145,10 @@
         <ul id="invoices-list"></ul>
       </div>
       <div>
+        <h2>ACT Invoices</h2>
+        <ul id="act-invoices-list"></ul>
+      </div>
+      <div>
         <h2>Balance</h2>
         <p id="balance"></p>
       </div>
