--- a/public/pricing.html
+++ b/public/pricing.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-N393M5F');</script>
+    <!-- End Google Tag Manager -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Lyrn pricing is simple and transparent. Select the tutoring that your student needs and contact us to get started.">
@@ -17,6 +24,10 @@
   </head>
 
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N393M5F"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <header class="nav-start">
       <a href="index.html" class="logo">
         <svg class="logo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="303 440 496 225" style="enable-background:new 0 0 1080 1080;" xml:space="preserve">
@@ -173,7 +184,7 @@
             <h4 class="start">GET STARTED TODAY!</h4>
             <div class="select">
               <a href="tel:+13853000906">
-                <h3>CALL US</h3>
+                <h3>CALL OR TEXT</h3>
                 <p>(385) 300-0906</p>
               </a>
             </div>
@@ -221,7 +232,7 @@
             <h4 class="start">GET STARTED TODAY!</h4>
             <div class="select">
               <a href="tel:+13853000906">
-                <h3>CALL US</h3>
+                <h3>CALL OR TEXT</h3>
                 <p>(385) 300-0906</p>
               </a>
             </div>
@@ -233,7 +244,7 @@
         <div class="plan-wrapper custom">
           <div class="title">
             <h3>Customized programs</h3>
-            <h4>If you want a custom program that meets your needs and doesn't quite fit into our set porgrams, we would love to help get you started at no additional cost.</h4>
+            <h4>Want a more custom program? We would love to help get you started at no additional cost.</h4>
           </div>
           <div class="length">
             <h5>Give us a call or text if you have any questions about our programs</h5>
@@ -241,7 +252,7 @@
           <h4 class="start">GET STARTED TODAY!</h4>
           <div class="select">
             <a href="tel:+13853000906">
-              <h3>CALL US</h3>
+              <h3>CALL OR TEXT</h3>
               <p>(385) 300-0906</p>
             </a>
           </div>
@@ -304,7 +315,7 @@
             <div class="title">
               <h3>HOMEWORK HELP</h3>
               <h4>Every subject, any assignment</h4>
-              <h4>$25/hr</h4>
+              <h4>$30/hr</h4>
             </div>
             <div class="length">
               <h4>Completely flexible</h4>
@@ -325,7 +336,7 @@
             <h4 class="start">GET STARTED TODAY!</h4>
             <div class="select">
               <a href="tel:+13853000906">
-                <h3>CALL US</h3>
+                <h3>CALL OR TEXT</h3>
                 <p>(385) 300-0906</p>
               </a>
             </div>
