--- a/public/why.html
+++ b/public/why.html
@@ -13,8 +13,16 @@
     <meta name="description" content="Why should you choose Lyrn over other tutoring comapnies.">
     <title>Why Lyrn</title>
 
+    <script>
+      //this is so reCaptcha will trust local host
+      if (window.location.hostname == 'localhost') {
+        self.FIREBASE_APPCHECK_DEBUG_TOKEN = true;
+      }
+    </script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js" defer></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-analytics.js" defer></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app-check.js" defer></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-functions.js" defer></script>
 
     <script src="why.js" defer></script>
 
@@ -22,7 +30,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/ibd0auf.css">
   </head>
 
-  <body>
+  <body onload="bannerSetup()">
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N393M5F"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -58,6 +66,27 @@
       </nav>
       <div class="phone"><a href="tel:+13853000906"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000"><path d="M0 0h24v24H0z" fill="none"></path><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"></path></svg> Call Now (385) 300-0906</a></div>
     </header>
+
+    <!-- start banner -->
+    <div class="banner">
+      <p>Get started today and recieve your <strong>first lesson free!</strong> Click for details.</p>
+    </div>
+    <div class="modal">
+      <div class="modal-body">
+        <div class="close">
+          <svg viewbox="0 0 32 32">
+            <path d="M10,10 L22,22 M22,10 L10,22"></path>
+          </svg>
+        </div>
+        <h1>First session <span class="accent">free!</span></h1>
+        <h2>up to a <span class="accent">$150</span> value</h2>
+        <p>When you sign up for one of our ACT programs.</p>
+        <p>Enter your email to get a promo code to use when scheduling your program.</p>
+        <input type="email" placeholder="tutoring@lyrn.com">
+        <p class="error"></p>
+        <button class="submit">Ready to Lyrn</button>
+      </div>
+    </div>
 
     <main>
       <section class="hero">
